# podcli-rs

./: .dockerignore  .justfile  .vampus.yml  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
.github/workflows/: release.yml
src/: main.rs  podcast.rs
